src/main/resources/static/css/index.css
body {
    background-color: darkgrey;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
    margin: 0px;
    user-select: none;
}

#_F {color: bisque;}
#_O1 {color: #fa9d82;}
#_O2 {color: #ff8b8b;}
#_D {color: bisque;}
#_I {color: #fa9d82;}
#_E {color: #ff8b8b;}

#title {
    transform: scale(2.6, 1.5);
    font-size: -webkit-xxx-large;
    font-family: monospace;
    text-shadow: 4px -1px 0px #b39492;
    text-align: center;
}

#food-modals {
    position: fixed;
    width: 100vw;
    height: 100vh;
    overflow: scroll;
}

.food-modal {
    margin: 6vh 0vh;
    color: transparent;
    transition-duration: 0.15s;
    width: 100vw;
    height: 75vw;
}

.food-img {
    height: inherit;
    margin-left: 50vw;
    box-shadow: 0px 0px 12px -1px #b39492;
    transform: translate(-50%, 0%);
    cursor: pointer;
    width: inherit;
}

.food-note {
    height: 70.8vw;
    width: 62vw;
    color: floralwhite;
    font-size: x-large;
    padding: 2vw;
    overflow: scroll;
    background-color: rgba(166, 120, 70, 0.8);
    border-top-right-radius: 3vw;
    border-bottom-right-radius: 3vw;
    border: 1px dashed black;
    border-left-width: 0;
    transform: translate(-101%, 0%);
    z-index: 1;
    transition-duration: 0.3s;
    position: absolute;
    cursor: pointer;
    text-align: -webkit-center;
    white-space: pre-wrap;
}

.show {
    transition-duration: 0.2s;
    transform: translate(0%, 0%);
}

